--- a/style.sass
+++ b/style.sass
@@ -82,19 +82,33 @@ body
 
         #decisions
             width: 100%
+            // text-align: left
+            align-self: flex-start
+            flex-direction: column
+            align-items: flex-start
+            margin-left: 220px
+            font-size: 40px
             h2
-                text-decoration: underline
+                margin-top: 50px
+                text-align: left
+                font-weight: bold
             ul
+                list-style: none
                 li
                     font-size: 20px
+                    margin-left: 200px
                     &:first-child
                         font-size: 35px
                         font-weight: 700
 
         footer
-            width: 1000px
-            text-align: left
+            // width: 1000px
+            width: 100%
+            align-self: flex-start
+            margin-left: 220px
             margin-top: 100px
+            margin-bottom: 20px
+            text-align: left
 
 #backgroundText
     position: absolute
@@ -245,6 +259,11 @@ body
                     position: absolute
                     top: 271px
                     left: 560px
+            #decisions
+                margin-left: 150px
+
+            footer
+                margin-left: 150px
 
 @media (max-width: 1200px)
     #textSide
@@ -316,6 +335,21 @@ body
                     position: absolute
                     top: 270px
                     left: 550px
+            #decisions
+                width: 100%
+                margin-left: 0px
+                align-self: center
+                align-items: center
+                text-align: center
+                h2
+                    text-align: center
+                ul
+                    li
+                        margin: 0
+
+            footer
+                margin-left: 0px
+                text-align: center
 
 @media (max-width: 700px)
     #textSide
@@ -353,6 +387,9 @@ body
                     top: 195px
                     left: 380px   
                     transform: scale(0.7)
+            #decisions
+                h2
+                    font-size: 25px
 
 @media (max-width: 500px)
     #textSide
