--- a/style.sass
+++ b/style.sass
@@ -24,15 +24,19 @@ body
 .container-fluid
     overflow-x: hidden
 
+#backgroundText
+    position: absolute
+    top: -8vw
+    left: 0px
+    z-index: 5
+    margin: 0
+    padding: 
+    img
+        width: 100%
+
 #wheelSide
     background-color: $cthree
     // position: relative
-    #backgroundText
-    //     img
-    //         color: black
-        width: 100vw
-    //         top: 0
-    //         left: 0
     #wheelContainer
         // height: 100vh
         // margin-top: 100px
@@ -109,14 +113,6 @@ body
             margin-top: 100px
             margin-bottom: 20px
             text-align: left
-
-#backgroundText
-    position: absolute
-    top: 0px
-    right: 0px
-    z-index: 5
-    img
-        width: 100%
 
 #textSide
     background-color: rgba($ctwo, 0.15)
