--- a/style.sass
+++ b/style.sass
@@ -30,9 +30,9 @@ body
     left: 0px
     z-index: 5
     margin: 0
-    padding: 
     img
         width: 100%
+        transform: scale(1.04)
 
 #wheelSide
     background-color: $cthree
