--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ body {
   position: relative;
 }
 
+#wrapper {
+  overflow-x: hidden;
+  position: relative;
+}
+
 .container-fluid {
   overflow-x: hidden;
 }
@@ -59,6 +64,7 @@ body {
 #wheelSide #wheelContainer #titles h5 {
   width: 1000px;
   text-align: left;
+  font-size: 31px;
 }
 
 #wheelSide #wheelContainer #wheel {
@@ -117,7 +123,6 @@ body {
 #wheelSide #wheelContainer #decisions h2 {
   margin-top: 50px;
   text-align: left;
-  font-weight: bold;
 }
 
 #wheelSide #wheelContainer #decisions ul {
@@ -153,7 +158,7 @@ body {
 
 #textSide #inputsContainer {
   width: 419px;
-  margin-top: 370px;
+  margin-top: 470px;
 }
 
 #textSide #inputsContainer h1 {
@@ -206,7 +211,7 @@ body {
 
 #textSide #inputsContainer #addOptionContainer {
   width: 100%;
-  min-width: 500px;
+  min-width: 420px;
 }
 
 #textSide #inputsContainer #addOptionContainer #addOption {
