--- a/style.sass
+++ b/style.sass
@@ -21,6 +21,10 @@ body
     text-align: left
     position: relative
 
+#wrapper
+    overflow-x: hidden
+    position: relative
+
 .container-fluid
     overflow-x: hidden
 
@@ -58,6 +62,7 @@ body
             h5
                 width: 1000px
                 text-align: left
+                font-size: 31px
                 // transform: translateX(45px)
 
         #wheel
@@ -95,7 +100,7 @@ body
             h2
                 margin-top: 50px
                 text-align: left
-                font-weight: bold
+                // font-weight: bold
             ul
                 list-style: none
                 li
@@ -122,7 +127,7 @@ body
 
     #inputsContainer
         width: 419px
-        margin-top: 370px
+        margin-top: 470px
         // text-align: center
         h1
             font-size: 40px
@@ -148,7 +153,7 @@ body
                     border: 2px solid $ctwo
         #addOptionContainer
             width: 100%
-            min-width: 500px
+            min-width: 420px
             #addOption
                 position: relative
                 font-size: 40px
