--- a/style.sass
+++ b/style.sass
@@ -30,13 +30,13 @@ body
 
 #backgroundText
     position: absolute
-    top: -8vw
+    top: 0px
     left: 0px
     z-index: 5
     margin: 0
     img
         width: 100%
-        transform: scale(1.04)
+        transform: scale(1.01)
 
 #wheelSide
     background-color: $cthree
@@ -57,7 +57,7 @@ body
                 font-weight: 900
                 text-align: left
                 // transform: translateX(45px)
-                margin-top: 65px
+                margin-top: 80px
             
             h5
                 width: 1000px
