--- a/style.sass
+++ b/style.sass
@@ -66,13 +66,13 @@ body
                 // transform: translateX(45px)
 
         #wheel
-            margin-top: 420px
+            margin-top: 470px
             min-width: 750px
             min-height: 750px
             width: 750px
             height: 750px
             background-color: $cthree
-            box-shadow: -12px -12px 20px 1px rgba(255,255,255,1), 12px 1px 20px 3px rgba(#A2B4C6,0.3)
+            box-shadow: -12px -12px 10px 3px rgb(255,255,255), 12px 1px 10px 3px rgba(#A2B4C6,0.6)
             border-top: 1px solid white
             border-left: 1px solid white
             position: relative
@@ -251,7 +251,7 @@ body
             #titles
                 left: 150px
             #wheel
-                margin-top: 420px
+                margin-top: 470px
                 min-width: 600px
                 min-height: 600px
                 width: 600px
