--- a/style.sass
+++ b/style.sass
@@ -37,6 +37,7 @@ body
     img
         width: 100%
         transform: scale(1.01)
+        opacity: 0.5
 
 #wheelSide
     background-color: $cthree
@@ -149,7 +150,7 @@ body
                 outline: none
                 &::placeholder
                     color: $cfive
-                .option:focus
+                &:focus
                     border: 2px solid $ctwo
         #addOptionContainer
             width: 100%
@@ -218,7 +219,7 @@ body
         font-weight: 800
         outline: none
         border: 1px solid $ctwo
-        box-shadow: -12px -12px 25px 10px rgba(#FFfffF, 1), 6px 6px 20px 10px rgba($ctwo, 0.3), 1px 0px 0px 0px rgba(#FFFEEF, 1) 
+        box-shadow: -12px -12px 25px 10px rgba(#FFfffF, .8), 6px 6px 20px 10px rgba($ctwo, 0.3), 1px 0px 0px 0px rgba(#FFFEEF, 1) 
         &:hover
             background: $cthree
             color: $ctwo
